add popstar screenshot

--- a/_posts/2015-08-08-pop-star.md
+++ b/_posts/2015-08-08-pop-star.md
@@ -11,6 +11,10 @@ thread: popstar
 - 用`unity3d`实现了一个[消星星游戏](http://github.shanechu.com/popstar/index.html)
 - 源码托管在github仓库上：[消星星源码](https://github.com/enginzhu/popstar)
 
+## 游戏截图
+
+![popstar screenshot]({{ site.url }}/image/popstar/popstar.png)
+
 ## 外部资源
 
 - 创建五个方块 （`cube`）作为预设组件（`prefab`），材质（`material`）分别为红黄蓝绿紫五种不同颜色的星星图片
