--- a/_posts/2015-10-04-code-note.md
+++ b/_posts/2015-10-04-code-note.md
@@ -33,7 +33,7 @@ thread: code-reading-notes
 
 接下来有所突破的是**乔治·布尔**（`George Boole`，1815-1864），布尔将逻辑转化成可以用数学符号表达的系统，称之为**布尔代数**（`Boolean algebra`）。布尔代数中参与表达式运算的不是数字，而是**集合**（`set`）。
 
-然而乔治·布尔到死也没有想过可以用开关，电线和灯泡来连接一个电路实现一个**布尔表达式**。那个时候虽然白炽灯还没有发明（直到布尔死后15年），但**莫尔斯**在1844年已经演示了电报发声器，电路中的灯泡完全可以用电报发生器替代。
+然而乔治·布尔到死也没有想过可以用开关，电线和灯泡来连接一个电路实现一个**布尔表达式**。那个时候虽然白炽灯还没有发明（直到布尔死后15年），但**莫尔斯**在1844年已经演示了电报发声器，电路中的灯泡完全可以用电报发声器替代。
 
 整个19世纪，没有人将布尔代数中的AND，OR与串联，并联的一些开关联系起来，数学家没有，电工没有，电报操作员也没有，甚至计算机革命的创始人-**查尔斯·巴贝奇（`Charles Babbage`，1792-1871）**也没有（此人早年开发出差分机用来求解对数和三角函数，之后大半生都致力于开发分析机，期间失去政府支持，受尽冷眼嘲笑，直到晚年不能准确地发音，甚至不能有条理地表达自己的意思依然坚持工作，然而因为**分析机的设想超出了那个时代至少一个世纪**，最终不可避免地失败）。
 
