switch duoshuo to Disqus

--- a/_posts/2015-10-04-code-note.md
+++ b/_posts/2015-10-04-code-note.md
@@ -1,9 +1,9 @@
 ---
 layout: post
 title: 读书笔记-《编码的奥妙》
+comments: true
 categories: 笔记
 tags: reading-notes
-thread: code-reading-notes
 ---
 
 ## 现代通信的开端
